# neurate

./: .gitignore  backend.md  bun.lockb  component  eslint.config.mjs  next.config.ts  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  docker.rs  filetree.rs  fs.rs  lib.rs  main.rs  media.rs  mongo.rs  note.rs  ollama.rs  qdrant.rs  search.rs
src/app/: fonts.ts  layout.tsx  page.tsx  websocket-server.js
src/components/: command-menu.tsx  editor.tsx  enhanced-editor.tsx  keyboard-help.tsx  note-app.tsx  note-tabs.tsx  preview.tsx  sidebar.tsx  styles.module.scss
src/components/custom-free-note/: rich-sketchpad.tsx
src/components/custom-nodes/: command-list.tsx  konva-components.tsx  node-wrapper.tsx  sketch.tsx
src/components/custom-notebook-node/: command-list.tsx  konva-components.tsx  sketch.tsx
src/components/editor/: command-list.tsx  display.tsx  free-note.tsx  notebook.tsx  notebookssr.tsx  tiptap.tsx
src/components/sidebar/: note-tree-item.tsx  sidebar-section.tsx  sidebar.tsx
src/hooks/: use-debounce.ts  use-hotkeys.ts  use-local-storage.ts
src/lib/: context.ts  fs.ts  markdown.ts  note-utils.ts  types.ts  utils.ts
src/styles/: globals.css
