[package]
name = "elab"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "elab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
directories = "5.0"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
array_list = "0.3"
tauri-plugin-opener = "2"
qdrant-client = "1.13.0"
anyhow = "1.0.97"
tonic = "0.13.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
notify = "8.0.0"
ollama-rs = "0.3.0"
thiserror = "2.0.12"
mongodb = "3.2.3"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
